<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navigation_drawer"
        android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/new_transport"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_local_shipping_24"
                android:title="@string/new_transport" />
            <item
                android:id="@+id/active_transports"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_bolt_24"
                android:title="@string/active_transports" />
            <item
                android:id="@+id/history"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_history_24"
                android:title="@string/history" />
        </menu>
    </item>
    <item
        android:id="@+id/extra_functions"
        android:title="@string/extras">
        <menu>
           <!-- <item
                android:id="@+id/profile"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/profile" /> -->
            <item
                android:id="@+id/map_view"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_map_24"
                android:title="@string/map_view" />
        </menu>
    </item>
</menu>